# milliways

./: .env.example  .gitignore  .openspec.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GO_QUALITY_REVIEW.md  LICENSE  MILLIWAYS_NOTICE.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  go.mod  go.sum  install.sh  minimax_smoke_proof.md
.github/workflows/: ci.yml  release.yml  smoke.yml
assets/: milliways.icns
bundle/linux/: dev.milliways.MilliWays.desktop
bundle/macos/: Info.plist
cmd/milliways/: artifacts.go  artifacts_security_test.go  attach.go  attach_integration_test.go  attach_test.go  chat.go  chat_test.go  cmd_trace.go  cmd_trace_test.go  commands.go  commands_test.go  context_stdin_test.go  deck_control.go  deck_control_test.go  deck_integration_test.go  highlight.go  highlight_test.go  init_mode.go  launcher.go  launcher_test.go  line_reader.go  line_reader_test.go  main.go  main_test.go  models.go  parallel.go  parallel_integration_test.go  parallel_slash_test.go  parallel_view.go  parallel_view_test.go  run.go  scan.go  scan_test.go  security.go  security_test.go  session_deck.go  session_deck_test.go  takeover_test.go  term_title_test.go  usage.go  (+1 more)
cmd/milliwaysctl/: README.wezterm.md  chart.go  chart_test.go  check.go  check_test.go  codegraph.go  codegraph_test.go  daemon.go  daemon_test.go  install.go  install_test.go  linux_app_test.go  local.go  local_test.go  main.go  metrics_dashboard.go  milliways.lua  observe_agents_test.go  observe_render.go  observe_render_test.go  observe_test.go  opsx.go  opsx_test.go  parallel.go  parallel_integration_test.go  parallel_test.go  render.go  render_test.go  review.go  security.go  security_test.go  upgrade.go
cmd/milliwaysd/: main.go
crates/milliways-term/: Cargo.toml  PATCHES.md
crates/milliways-term/milliways/: Cargo.toml  build.rs
crates/milliways-term/milliways/etc/: milliways.lua  sample-wezterm.lua
crates/milliways-term/milliways/examples/: ping.rs  subscribe_status.rs
crates/milliways-term/milliways/src/: lib.rs  reconnect.rs
crates/milliways-term/milliways/src/agent_domain/: banner.rs  bridge_child.rs  mod.rs  watcher.rs
crates/milliways-term/milliways/src/context_overlay/: mod.rs
crates/milliways-term/milliways/src/observability_pane/: mod.rs
crates/milliways-term/milliways/src/rpc/: client.rs  mod.rs  types.rs
crates/milliways-term/milliways/src/status_helpers/: mod.rs
crates/milliways-term/milliways/src/wezterm_compat/: mod.rs
docs/: MANUAL-VERIFICATION.md  SOP.md  milliways-blog-1.md  milliways-blog-2.md  milliways-blog-4.md  milliways-blog-5.md  milliways-blog-6.md  milliways-blog.md  milliways-medium.html  render_blog_2_assets.py  render_control_plane_assets.py  render_local_model_assets.py
docs/spikes/: SPIKE-agent-domain-virtual-pty.md  SPIKE-wezterm-overlay-kitty-graphics.md
internal/bridge/: bridge.go  bridge_integration_test.go  bridge_test.go  cross_palace.go  registry.go  sanitize.go  sanitize_test.go  topic.go
internal/commands/: commands_test.go  executor.go  executor_test.go  loader.go  loader_test.go
internal/config/: config.go  config_test.go  mode.go  mode_test.go  path_guard.go  path_guard_test.go
internal/conversation/: checkpoint.go  continue.go  continue_test.go  memory.go  memory_test.go  (+4 more)
nvim-plugin/: README.md
proto/: README.md  milliways.json
scripts/: build-linux-amd64.sh  gen-rpc-types.sh  install_feature_deps.sh  install_local.sh  install_local_swap.sh  smoke-features.sh  smoke-linux-install.sh  smoke-minimax.sh  smoke-upgrade.sh  smoke.sh  upgrade.sh
(+718 files in other folders)
